# scadm

./: .gitignore  Cargo.toml  README.md  package.json
.parcel-cache/: 220811291829ef53  3d261703c4f582af.txt  4fe4d476168311b0  lock.mdb
src/: chromafi.d.ts  config.rs  conn.rs  constants.rs  error.rs  frame.rs  github.rs  header.ts  index.ts  installation.rs  lib.rs  linus.d.ts  setup.ts  start.ts  status.rs  sysinfo.ts
src/commands/: start.rs  stop.rs
src/config/: get.ts  index.ts  set.ts
src/daemon/: mod.rs  start.rs  stop.rs
src/installers/: docker-compose.ts  docker.ts  util.ts
src/util/: ask-loop.ts  config.ts  dependencies.ts  exec.ts  logger.ts  system.ts  time.ts  trycatch.ts
