[package]
name = "scadm"
version = "0.1.0"
edition = "2021"

# Version policy: Always specify major+minor, optionally patch for critical
# dependencies (e.g. cryptographic libraries)
[dependencies]
clap = { version = "3.2", features = ["derive"] }
indoc = { version = "1.0" }
daemonize = { version = "0.4" }
tokio = { version = "1.19", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["full"] }
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
parking_lot = "0.12"
lazy_static = "1.4"
nix = "0.24"
libc = "0.2"
home = "0.5"
serde_yaml = "0.8"
semver = { version = "1.0", features = ['serde'] }
reqwest = { version = "0.11", features = ['stream'] }
futures = "0.3"
async-compression = { version = "0.3", features = ['futures-io', 'gzip'] }
async-tar = "0.4"

[lib]
name = "scadm_core"
path = "src/lib.rs"

[[bin]]
name = "scadm"
path = "src/bin/scadm.rs"

[[bin]]
name = "scadmd"
path = "src/bin/scadmd.rs"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
